# ai-recruitment-assistant

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  deploy.sh  docker-compose.yml  fix_secrets.sh  pyproject.toml  railway.toml  start.sh
app/: ats_ranker.py  auth.py  billing.py  cli.py  config.py  csv_pipeline.py  database.py  logging_config.py  media_stream.py  models.py  orchestrator.py  output.py  phone_utils.py  resume_parser.py  saas_db.py  saas_server.py  scheduler.py  server.py  telnyx_service.py  twilio_service.py  vapi_client.py  webhook.py
app/static/: index.html
data/: suppression_list.csv
tests/: test_csv_pipeline.py  test_database.py  test_phone_utils.py  test_webhook.py
